# openclaw-mission-control

./: .env.example  docker-compose.yml  nginx.conf  package-lock.json  package.json
apps/api/: .env.example  eslint.config.js  package.json  tsconfig.json
apps/api/prisma/: dev.db  schema.prisma
apps/api/src/: env.ts  index.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/agents/: page.tsx
apps/web/app/tasks/: page.tsx
apps/web/app/war-room/: RunWarRoomButton.tsx  page.tsx
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: crypto.py  db.py  main.py  models.py  openclaw.py  openclaw_status.py  schemas.py  settings.py
config/: agent-templates.example.json  mission-control.example.json
frontend/: .env.example  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts  router.tsx
frontend/src/components/: WorkspaceSwitcher.tsx
frontend/src/components/kanban/: DndKanban.tsx
frontend/src/components/ui/: toaster.tsx
frontend/src/lib/: api.ts  workspace.ts
frontend/src/routes/: __root.tsx  agents.tsx  audit.tsx  index.tsx  settings.tsx  tasks.$taskId.tsx  tasks.tsx  war-room.tsx
