[project]
name = "openclaw-mission-control-backend"
version = "0.0.1"
description = "Mission control backend for OpenClaw agents (RBAC, Kanban, War Room, transcripts)"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.14.0",
  "pydantic>=2.10.3",
  "pydantic-settings>=2.6.1",
  "python-dotenv>=1.0.1",
  "httpx>=0.28.1",
  "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
